# glue

./: .stylish-haskell.yaml  README.md  default.nix  glue.cabal  result  shell.nix  stack.yaml
app/: Main.hs
glsl/: common.vert  light.frag  object.frag  triangle.frag  triangle.vert
src/: GLStorable.hs  Lib.hs  Mesh.hs  NonGL.hs  Obj.hs  Program.hs  Texture.hs  Types.hs  Uniform.hs  Window.hs
test/: Main.hs
